<resources>
    <string name="app_name">Speed match</string>
    <string name="start_game">Start Game !</string>
    <string name="best_score">Best Score</string>
    <string name="user_name">Please enter your name :</string>
    <string name="user_name_entering">Enter your name to start the game!</string>
    <string name="confirm">Confirm</string>
    <string name="remain">Remain time is :</string>
    <string name="Score">Your score is :</string>
    <string name="both">Both Same</string>
    <string name="one">One Same</string>
    <string name="none">Non same</string>
</resources>
