<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/gray">


<android.support.constraint.ConstraintLayout
    android:id="@+id/game_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="invisible"
    android:orientation="vertical">

    <TextView
        android:id="@+id/time_bar"
        android:layout_width="match_parent"
        android:padding="@dimen/medium_size"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:textSize="@dimen/big_size"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:text="@string/remain"/>

    <TextView
        android:id="@+id/game_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/big_size"
        app:layout_constraintVertical_bias="0.2"
        android:textColor="@color/cardview_dark_background"
        android:text="@string/Score"/>

    <ImageView
        android:id="@+id/red_triangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintRight_toLeftOf="parent"
        android:src="@drawable/red_triangle"/>

    <ImageView
        android:id="@+id/blue_triangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintRight_toLeftOf="parent"
        android:src="@drawable/blue_triangle"/>

    <ImageView
        android:id="@+id/green_triangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintRight_toLeftOf="parent"
        android:src="@drawable/green_triangle"/>
    <ImageView
        android:id="@+id/red_square"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintRight_toLeftOf="parent"
        android:src="@drawable/red_square"/>
    <ImageView
        android:id="@+id/green_square"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintRight_toLeftOf="parent"
        android:src="@drawable/green_square"/>
    <ImageView
        android:id="@+id/blue_square"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintRight_toLeftOf="parent"
        android:src="@drawable/blue_square"/>
    <ImageView
        android:id="@+id/red_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintRight_toLeftOf="parent"
        android:src="@drawable/red_circle"/>

    <ImageView
        android:id="@+id/blue_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintRight_toLeftOf="parent"
        android:src="@drawable/blue_circle"/>
    <ImageView
        android:id="@+id/green_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintRight_toLeftOf="parent"
        android:src="@drawable/green_circle"/>


    <Button
        android:id="@+id/both_same"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.85"
        app:layout_constraintHorizontal_bias="0.129"
        android:text="@string/both"/>

    <Button
        android:id="@+id/one_same"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.85"
        app:layout_constraintHorizontal_bias="0.5"
        android:text="@string/one"/>

    <Button
        android:id="@+id/none_same"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.85"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        android:text="@string/none"/>

    <TextView
        android:id="@+id/first_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        android:text="f"/>

    <TextView
        android:id="@+id/second_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.7"/>

</android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="@dimen/big_size"
        android:textColor="@color/colorPrimaryDark"
        android:text=""/>


</android.support.constraint.ConstraintLayout>